unpackaged/main/default/objects/Meeting_Room__c/Meeting_Room__c.object-meta.xml
<CustomObject>
    <description>Used for Pfizer in GES Connect</description>
    <label>Meeting Room</label>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Meeting Room Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Room</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>