unpackaged/main/default/objects/Meeting_Room__c/fields/AV__c.field-meta.xml
<CustomField>
    <fullName>AV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created under 465</description>
    <label>AV</label>
    <type>Checkbox</type>
</CustomField>