unpackaged/main/default/objects/Meeting_Room__c/fields/Congress__c.field-meta.xml
<CustomField>
    <fullName>Congress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Congress</label>
    <referenceTo>GES_Connect_Corporate_Accounts__c</referenceTo>
    <relationshipLabel>Meeting Room</relationshipLabel>
    <relationshipName>Meeting_Room</relationshipName>
    <type>Lookup</type>
</CustomField>