unpackaged/main/default/objects/Meeting_Room__c/fields/Day_2_Close_date_time__c.field-meta.xml
<CustomField>
    <fullName>Day_2_Close_date_time__c</fullName>
    <description>created under SAL-465</description>
    <label>Day 2 - Close date &amp; time</label>
    <type>DateTime</type>
</CustomField>