unpackaged/main/default/objects/Meeting_Room__c/fields/F_B__c.field-meta.xml
<CustomField>
    <fullName>F_B__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created under SAL-465</description>
    <label>F&amp;B</label>
    <type>Checkbox</type>
</CustomField>