unpackaged/main/default/objects/Meeting_Room__c/fields/Furnitire__c.field-meta.xml
<CustomField>
    <fullName>Furnitire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created under SAL-465</description>
    <label>Furniture</label>
    <type>Checkbox</type>
</CustomField>