unpackaged/main/default/objects/Meeting_Room__c/fields/GES_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Project_Manager__c</fullName>
    <label>GES Project Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AJ – Andy Jones</fullName>
                <label>Andy Jones</label>
            </value>
            <value>
                <fullName>AV – Andy Valentine</fullName>
                <label>Andy Valentine</label>
            </value>
            <value>
                <fullName>MZ - Margaret Zajda</fullName>
                <label>Margaret Zajda</label>
            </value>
            <value>
                <fullName>PR – Paul Readman</fullName>
                <label>Paul Readman</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>