unpackaged/main/default/objects/Meeting_Room__c/fields/GES_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>GES_Project_Number__c</fullName>
    <label>GES Project Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>