unpackaged/main/default/objects/Meeting_Room__c/fields/I_D_Name_Other__c.field-meta.xml
<CustomField>
    <fullName>I_D_Name_Other__c</fullName>
    <description>created under SAL-523</description>
    <label>I&amp;D Name (Other)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>