unpackaged/main/default/objects/Meeting_Room__c/fields/Internet__c.field-meta.xml
<CustomField>
    <fullName>Internet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created under SAL-465</description>
    <label>Internet</label>
    <type>Checkbox</type>
</CustomField>