unpackaged/main/default/objects/Meeting_Room__c/fields/Meeting_Room_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Date__c</fullName>
    <label>Meeting Room Date</label>
    <type>Date</type>
</CustomField>