unpackaged/main/default/objects/Meeting_Room__c/fields/Meeting_Room_Location__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Location__c</fullName>
    <label>Meeting Room Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>