unpackaged/main/default/objects/Meeting_Room__c/fields/Meeting_Room_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Notes__c</fullName>
    <description>created under SAL-465</description>
    <label>Meeting Room Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>