unpackaged/main/default/objects/Meeting_Room__c/fields/Meeting_Room_Number__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Number__c</fullName>
    <description>Changed the Label under SAL 565</description>
    <label>Meeting Room Name/Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>