unpackaged/main/default/objects/Meeting_Room__c/fields/Meeting_Room_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Time__c</fullName>
    <label>Meeting Room Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>