unpackaged/main/default/objects/Meeting_Room__c/fields/Meeting_Room_Use__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Use__c</fullName>
    <description>created under SAL 465</description>
    <label>Meeting Room Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opinion Leader</fullName>
            </value>
            <value>
                <fullName>Pfizer Work Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>