unpackaged/main/default/objects/Meeting_Room__c/fields/MR_Type__c.field-meta.xml
<CustomField>
    <fullName>MR_Type__c</fullName>
    <label>Meeting Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>